style.css
* {
    box-sizing: border-box;
}

body {
    display: flex;
    flex-direction: column;

    background-color: rgb(248, 237, 235);
}

#header {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    text-align: center;
    color: rgb(0, 0, 0);
    background-color: rgb(249, 220, 196);
    border-radius: 0.6rem;
    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.548);
}

#content {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
    gap: 5rem;

    margin: 1.2rem;
}

/* Button styles */

button {
    padding: 0.6rem;
    font-size: 1rem;
    font-weight: 500;
    border: 1px solid transparent;
    border-radius: 0.3rem;
    cursor: pointer;
    transition: border-color 0.25s;
}

button:hover {
    border-color: rgb(0, 0, 0);
    opacity: 0.8;
}

.add-project-btn, .project-actions>button, .add-task-btn, .task-actions>button {
    background-color: rgb(252, 213, 206);
}

.del-project-btn:hover, .del-task-btn:hover {
    background-color: rgb(255, 0, 0);
}

.add-project-btn, .add-task-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 0.3rem;
}

img {
    width: 2rem;
    height: 2rem;
}

.add-project-btn>img, .add-task-btn>img {
    width: 1.2rem;
    height: 1.2rem;
}

.save-edit-btn>img {
    width: 1.8rem;
    height: 1.8rem;
}

/* List Container */

.list-container {
    display: flex;
    flex-direction: column;
    gap: 0.6rem;
}

.project-list {
    display: flex;
    flex-direction: column;
    gap: 0.3rem;
}

.project-list>button {
    background-color: rgb(238, 168, 154);
}

.active-project {
    font-weight: bold;
}

/* Project Container */

.project-container {
    display: flex;
    flex-direction: column;
    gap: 0.6rem;
}

.project-header {
    display: flex;
    gap: 0.3rem;
}

.project-name {
    min-width: 0;
}

.tasks-remaining {
    font-size: 0.8rem;
    color: rgb(97, 96, 96);
}

.task-list {
    display: flex;
    flex-direction: column;
    gap: 0.3rem;
}

.task-list>button {
    background-color: #eea89a;
}

.project-actions {
    display: flex;
    gap: 0.3rem;
}

.active-task {
    font-weight: bold;
}

.clear-completed-btn {
    font-style: italic;
}

/* Task Container */

#task-form {
    display: flex;
    flex-direction: column;
    gap: 0.3rem;
}

.task-container {
    display: flex;
    flex-direction: column;
    gap: 0.3rem;
}

.task-title {
    min-width: 0;
}

.task-actions {
    display: flex;
    gap: 0.3rem;
    align-items: center;
}

.task-complete {
    text-decoration: line-through;
}

.task-complete-container {
    padding: 0.6rem;
    border: 1px solid transparent;
    border-radius: 0.3rem;
    background-color: rgb(252, 213, 206);
    cursor: pointer;
    transition: border-color 0.25s;
}

.task-complete-container:hover {
    border-color: rgb(0, 0, 0);
    opacity: 0.8;
}

input[type=checkbox] {
    width: 1.9rem;
    height: 1.9rem;
}

/* Task Form and Project Form */

form>input,textarea {
    background-color: #FFFFFF;
    border: 1px solid #E5E7EB;
    border-radius: 0.3rem;
    width: 100%;
    margin: 0.3rem;
    padding: 0.4rem;
    font-size: 1rem;
}
  
form>input,textarea:focus {
    border: 1px solid rgb(46, 46, 161);
}
  
form>input,textarea:invalid {
    border: 1px solid rgb(219, 25, 25);
    color: rgb(219, 25, 25);
}

form>button {
    background-color: rgb(221, 168, 157);
    margin: 5px 0 0 5px;
}

#date-error {
    font-size: 0.8rem;
    color: rgb(255, 0, 0);
    margin: 0.3rem;
    padding: 0.4rem;
}

#date-error:empty {
    display: none;
}

